# seanpedersen.github.io

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build-fast.sh  index.html  migrate-posts.py  next.config.js  package-lock.json  package.json  publish-ipfs.sh
build-rust/: Cargo.toml  README.md
components/: ExpandableCodeBlock.js  ExpandableCodeBlock.module.css  Search.js  Search.module.css  TableOfContents.js  TableOfContents.module.css  date.js  layout.js  layout.module.css
contexts/: ThemeContext.js
lib/: posts.js
pages/: 404.js  _app.js  _document.js  index.js
posts/: CLAUDE.md  Discovered, Not Designed.md  a-thousand-brains.md  absurd-society.md  agi-bubble.md  ai-invest-forecast.md  ai-mrna-cancer-dog.md  ai-safety-farce.md  analog-computing.md  analyze-telegram-chats.md  analyze-twitter-likes.md  arxiv-approximate-vector-search-benchmark.md  baberowski-interview.md  biological-computing.md  chat-control-eu.md  claude-code.md  closing-clip-modality-gap.md  coding-agent.md  colds-immune-system.md  complex-numbers-and-2d-vectors.md  conscious-reprogramming.md  cryptocurrency.md  dark-energy.md  decentral-software.md  digital-capitalism-alternatives.md  digital-design.html  digital-design.md  digital-freedom.md  digital-future.md  digital-re-search.md  digital-security.md  digital-uncertainty.md  discovered-not-designed.md  elixir.md  erlang.md  formidable-projects.md  functional-programming.md  future-of-programming.md  future.md  game-theory.md  (+63 more)
scripts/: build-static.js  generate-rss.js  optimize.js  templates.js
src/: class_minifier.rs  (+9 more)
(+40 files in other folders)
