[package]
name = "blog-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.13"
pulldown-cmark-escape = "0.11"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
regex = "1.11"
walkdir = "2.5"
anyhow = "1.0"
once_cell = "1.20"
tera = "1.20"
syntect = "5.2"

# Asset optimization
lightningcss = "1.0.0-alpha.68"
minify-html = "0.15"
minify-js = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
